art_make(LIB_LIBRARIES
           larsim_MCCheater_BackTrackerService_service
           larsim_MCCheater_ParticleInventoryService_service
           nug4_ParticleNavigation
           nusimdata_SimulationBase
           lardata_RecoObjects
           lardataalg_DetectorInfo
           larcorealg_Geometry
           larreco_Calorimetry
           art::Framework_Principal
           art::Framework_Services_Registry
           ${ART_PERSISTENCY_PROVENANCE}
           art_root_io::TFileService_service
           art_root_io::tfile_support
           ${ART_UTILITIES}
           ${CANVAS}
           ${CETLIB_EXCEPT}
           cetlib::cetlib
           ROOT::Core
           ROOT::GenVector
           ROOT::Gpad
           ROOT::Graf
           ROOT::Graf3d
           ROOT::Hist
           ROOT::MathCore
           ROOT::Matrix
           ROOT::RIO
           ROOT::Tree
           ROOT::TMVA)

add_subdirectory(TCDebugTools)

install_headers()
install_source()
