cet_make_library(SOURCE
  DataStructs.cxx
  DebugStruct.cxx
  PFPUtils.cxx
  StepUtils.cxx
  TCCR.cxx
  TCHist.cxx
  TCShTree.cxx
  TCShower.cxx
  TCVertex.cxx
  Utils.cxx
  LIBRARIES
  PUBLIC
  art_root_io::TFileService_service
  art::Framework_Services_Registry
  messagefacility::MF_MessageLogger
  lardataobj::RecoBase
  larcoreobj::SimpleTypesAndConstants
  PRIVATE
  larreco::Calorimetry
  larsim::MCCheater_BackTrackerService_service
  larsim::MCCheater_ParticleInventoryService_service
  larevt::ChannelStatusProvider
  lardataalg::DetectorInfo
  larcorealg::Geometry
  messagefacility::MF_MessageLogger
  cetlib::cetlib
  ROOT::Hist
  ROOT::TMVA
)

add_subdirectory(TCDebugTools)

install_headers()
install_source()
